[gd_scene load_steps=6 format=3 uid="uid://rmlytivthpig"]

[ext_resource type="PackedScene" uid="uid://c0g6wdifrfjeb" path="res://scenes/container/item_container.tscn" id="1_wrhsc"]
[ext_resource type="Script" path="res://scenes/container/crate.gd" id="2_3jq4e"]
[ext_resource type="Texture2D" uid="uid://6c7kcbqs5ry2" path="res://graphics/objects/box/base.png" id="2_nou1g"]
[ext_resource type="Texture2D" uid="uid://di503bxr6w532" path="res://graphics/objects/box/lid.png" id="3_3gjhv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0o2gu"]
size = Vector2(400, 178)

[node name="ItemContainer" instance=ExtResource("1_wrhsc")]
script = ExtResource("2_3jq4e")

[node name="BaseSprite" parent="." index="0"]
texture = ExtResource("2_nou1g")

[node name="LidSprite" parent="." index="1"]
position = Vector2(0, 10)
texture = ExtResource("3_3gjhv")

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_0o2gu")

[node name="SpawnPositions" type="Node2D" parent="." index="3"]

[node name="Marker2D" type="Marker2D" parent="SpawnPositions" index="0"]
position = Vector2(-150, -59)

[node name="Marker2D2" type="Marker2D" parent="SpawnPositions" index="1"]
position = Vector2(-140, -15)

[node name="Marker2D3" type="Marker2D" parent="SpawnPositions" index="2"]
position = Vector2(-148, 34)

[node name="Marker2D4" type="Marker2D" parent="SpawnPositions" index="3"]
position = Vector2(-79, 29)

[node name="Marker2D5" type="Marker2D" parent="SpawnPositions" index="4"]
position = Vector2(-88, -6)

[node name="Marker2D6" type="Marker2D" parent="SpawnPositions" index="5"]
position = Vector2(-77, -47)

[node name="Marker2D7" type="Marker2D" parent="SpawnPositions" index="6"]
position = Vector2(-48, -16)
rotation = -0.959358

[node name="Marker2D8" type="Marker2D" parent="SpawnPositions" index="7"]
position = Vector2(-12, 26)
rotation = -0.959358

[node name="Marker2D9" type="Marker2D" parent="SpawnPositions" index="8"]
position = Vector2(-12, -32)
rotation = -0.959358

[node name="Marker2D10" type="Marker2D" parent="SpawnPositions" index="9"]
position = Vector2(44, -33)
rotation = -0.959358

[node name="Marker2D11" type="Marker2D" parent="SpawnPositions" index="10"]
position = Vector2(56, 13)
rotation = -0.959358

[node name="Marker2D12" type="Marker2D" parent="SpawnPositions" index="11"]
position = Vector2(117, 21)
rotation = -0.959358

[node name="Marker2D13" type="Marker2D" parent="SpawnPositions" index="12"]
position = Vector2(90, -16)
rotation = -3.63004

[node name="Marker2D14" type="Marker2D" parent="SpawnPositions" index="13"]
position = Vector2(141, -15)
rotation = -3.63004

[node name="Marker2D15" type="Marker2D" parent="SpawnPositions" index="14"]
position = Vector2(157, -41)
rotation = -3.63004

[node name="Marker2D16" type="Marker2D" parent="SpawnPositions" index="15"]
position = Vector2(117, -55)
rotation = -3.63004

[node name="Marker2D17" type="Marker2D" parent="SpawnPositions" index="16"]
position = Vector2(68, -55)
rotation = -3.63004

[node name="Marker2D18" type="Marker2D" parent="SpawnPositions" index="17"]
position = Vector2(28, -56)
rotation = -3.63004

[node name="Marker2D19" type="Marker2D" parent="SpawnPositions" index="18"]
position = Vector2(-37, -56)
rotation = -3.63004

[node name="Marker2D20" type="Marker2D" parent="SpawnPositions" index="19"]
position = Vector2(-109, -58)
rotation = -3.63004
